<resources>
    <string name="app_name" translatable="false">TinNews</string>
    <string name="title_home">Home</string>
    <string name="title_save">Save</string>
    <string name="title_search">Search</string>
    <string name="title_details">Details</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name='saved_item_author'>Author:</string>
    <string name="saved_item_description">Description:</string>
</resources>