<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <item
    android:id="@+id/navigation_home"
    android:icon="@drawable/ic_home_black_24dp"
    android:title="@string/title_home" />

  <item
    android:id="@+id/navigation_search"
    android:icon="@drawable/ic_search_black_24dp"
    android:title="@string/title_search" />

  <item
    android:id="@+id/navigation_save"
    android:icon="@drawable/ic_save_black_24dp"
    android:title="@string/title_save" />
</menu>