<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context=".ui.home.HomeFragment">

  <com.yuyakaido.android.cardstackview.CardStackView
    android:id="@+id/home_card_stack_view"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1" />

  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="24dp"
    android:orientation="horizontal">

    <ImageButton
      android:id="@+id/home_unlike_button"
      android:layout_width="64dp"
      android:layout_height="64dp"
      android:layout_marginEnd="32dp"
      android:background="?attr/selectableItemBackgroundBorderless"
      android:padding="6dp"
      android:scaleType="fitCenter"
      android:src="@drawable/ic_thumb_down_24dp"
      app:tint="#FF5D57" />

    <ImageButton
      android:id="@+id/home_like_button"
      android:layout_width="64dp"
      android:layout_height="64dp"
      android:layout_marginStart="32dp"
      android:background="?attr/selectableItemBackgroundBorderless"
      android:padding="6dp"
      android:scaleType="fitCenter"
      android:src="@drawable/ic_thumb_up_24dp"
      app:tint="#00A76F" />
  </LinearLayout>

</LinearLayout>